package org.example;

public interface Expression extends ASTNode {
    Object getValue();
}
